--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "cp node_modules/@dqbd/tiktoken/tiktoken_bg.wasm dist/tiktoken_bg.wasm && tsc",
-    "package": "ncc build --license licenses.txt --external @libsql/client",
+    "package": "ncc build --license licenses.txt",
     "act": "npm run build && npm run package && ./bin/act pull_request_target --secret-file .secrets",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
@@ -25,10 +25,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@aigne/anthropic": "^0.10.5",
-    "@aigne/core": "^1.42.0",
+    "@aigne/anthropic": "^0.10.6",
+    "@aigne/core": "1.17.0",
     "@dqbd/tiktoken": "^1.0.7",
     "@octokit/action": "^6.0.4",
     "@octokit/plugin-retry": "^4.1.3",
@@ -57,5 +56,10 @@
     "prettier": "2.8.8",
     "ts-jest": "^27.1.2",
     "typescript": "^4.9.5"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "protobufjs"
+    ]
   }
 }
